<resources>
    <string name="app_name">VVO aero</string>
    <string name="main_activity_title">Онлайн-табло рейсов</string>
    <string name="main_activity_title_en">Online flight info</string>
    <string name="direction">Направление:</string>
    <string name="direction_en">Direction:</string>
    <string name="day">Дата:</string>
    <string name="day_en">Day:</string>
    <string name="reception_desks">Стойки регистрации:</string>
    <string name="reception_desks_en">Check-in desks:</string>
    <string name="checkin_time">Время регистрация:</string>
    <string name="checkin_time_en">Check-in time:</string>
    <string name="exit">Выход:</string>
    <string name="exit_en">Gate:</string>
    <string name="plan_date">Запланированная дата:</string>
    <string name="plan_date_en">Date:</string>
    <string name="company">Авиакомпания:</string>
    <string name="company_en">Airlines:</string>
    <string name="vehicle">Модель самолёта:</string>
    <string name="vehicle_en">Aircraft type:</string>
    <string name="settings_name">Настройки</string>
    <string name="settings_name_en">Settings</string>
    <string name="dark_mode">Тёмная тема</string>
    <string name="dark_mode_en">Dark mode</string>
    <string name="rate_us">Оценить приложение</string>
    <string name="rate_us_en">Rate app</string>
    <string name="airport_header">Аэропорт</string>
    <string name="airport_header_en">Airport</string>
    <string name="phone">8(423)230-69-09</string>
    <string name="address">ул. Владимира Сайбеля, 45, Артём</string>
    <string name="address_en">Vladimir Saibel Street, 45, Artem</string>
    <string name="dev_header">Разработчик</string>
    <string name="dev_header_en">Developer</string>
    <string name="dev_email">dev@nav-com.ru</string>
    <string name="dev_disclaimer">Это приложение НЕ является официальным</string>
    <string name="dev_disclaimer_en">This app is NOT official</string>
    <string name="version">v1.1.0</string>
</resources>